Prevent group label from covering the item and preventing click/hover
Since ratio of 1 is used, if the overflow is not hidden, the label extends over the items rendering a part of them not clickable/hoverable.

--- a/index.css
+++ b/index.css
@@ -59,6 +59,7 @@ body {
 
 .groupLabel {
   color: silver;
+  overflow: hidden;
   padding: .25ex 1em .25ex 0;
   width: 1ex;
 }
